# Open-CV-Setup

./: CMakeLists.txt  readme.md
res/: 0001-0025.mkv
src/: main.cpp
